global/00-namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: cubeartisan
---
kind: Namespace
apiVersion: v1
metadata:
  name: cubeartisan-staging
---
kind: Namespace
apiVersion: v1
metadata:
  name: cubeartisan-ingress
---
kind: Namespace
apiVersion: v1
metadata:
  name: mtgml
