global/09-elastic-agent.kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
  namespace: kube-logging
spec:
  selector:
    agent.k8s.elastic.co/name: fleet-server
  ports:
    - protocol: TCP
      port: 8200
