global/30-mtgml-server.kube.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mtgml-server
  name: mtgml-server
  namespace: mtgml
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    service: mtgml-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mtgml-server
  name: mtgml-server
  namespace: mtgml
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      service: mtgml-server
  template:
    metadata:
      labels:
        service: mtgml-server
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: github-docker
      containers:
        - name: cube-recommender
          image: "ghcr.io/cubeartisan/mtgml:20220210-1"
          ports:
            - containerPort: 8000
              name: http
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1Gi
              cpu: 1
            requests:
              memory: 1Gi
              cpu: 0.5
          livenessProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 1
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /version
              port: http
            initialDelaySeconds: 180
            periodSeconds: 60
          startupProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 15
            periodSeconds: 60
