global/50-kibana-ingress.kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mtgml-server
  namespace: mtgml
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: cubeartisan-frontend-config
    cloud.google.com/backend-config: '{"default": "cubeartisan-backend-config"}'
    networking.gke.io/managed-certificates: mtgml-cert
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: mtgml.cubeartisan.net
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: mtgml-server
                port:
                  number: 80
